[package]
name = "sentry-conduit"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
conduit = "0.9.0-alpha.5"
conduit-middleware = "0.9.0-alpha.4"
sentry-core = { version = "0.23.0", default-features = false }

[dev-dependencies]
conduit-hyper = "0.3.0-alpha.7"
conduit-router = "0.9.0-alpha.6"
hyper = { version = "0.14", features = ["server", "http1", "stream", "tcp"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing-subscriber = "0.2.25"
sentry = { version = "0.23.0", features = ["debug-logs", "test"] }
