[package]
name = "sentry-conduit"
version = "0.5.0"
description = "Sentry middleware for conduit"
authors = ["Tobias Bieniek <tobias.bieniek@gmail.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/Turbo87/sentry-conduit.git"
keywords = ["sentry", "conduit", "error"]
edition = "2018"
rust-version = "1.53.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["router"]
router = ["conduit-router"]

[dependencies]
conduit = "0.10.0"
conduit-middleware = "0.10.0"
conduit-router = { version = "0.10.0", optional = true }
sentry-core = { version = "0.25.0", default-features = false }

[dev-dependencies]
conduit-hyper = "0.4.1"
hyper = { version = "0.14", features = ["server", "http1", "stream", "tcp"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.31"
tracing-subscriber = "0.3.9"
sentry = { version = "0.25.0", features = ["debug-logs", "tracing", "test"] }
